# csrf-shield-ai

./: .gitignore  README.md  pyproject.toml  report.json  requirements-dev.txt  requirements.txt
.agent/instructions/: Roadmap.instructions.md  coding_standards.instructions.md  documentation_standards.instructions.md  git_workflow.instructions.md  task_completion_workflow.instructions.md  testing_strategy.instructions.md
.agent/rules/: operational-protocol.md
config/: rules.yaml  settings.yaml
data/sample_har/: api_key.har  bearer_auth.har  form_urlencoded.har  get_state_change.har  json_body.har  minimal.har  mixed_auth.har  multipart.har  multipart_form.har  protected.har  static_token.har  truncated_body.har  vulnerable.har
data/synthetic/: synthetic_csrf_data.csv
docs/defense/: DEFENSE_NOTES.md
docs/guides/: API_REFERENCE.md  USER_GUIDE.md
docs/proposal/: CLI_TUI_PROPOSAL.md  PROPOSAL.md
docs/reports/: 2026-02-24_milestone2-data-models.md  2026-02-24_milestone3-har-parser.md  2026-02-24_milestone4-flow-reconstructor.md  2026-02-24_milestone5-auth-detector.md  2026-02-24_milestone6-synthetic-data.md  2026-02-24_milestone7-cli-entry-point.md  2026-02-24_phase1-project-setup.md  README.md  pre_phase2_doc_sync.md
scripts/: generate_synthetic_data.py
spec/: Design.md  Requirements.md  Tasks.md
src/: main.py
src/input/: auth_detector.py  flow_reconstructor.py  har_parser.py  models.py
tests/: conftest.py  test_auth_detector.py  test_cli.py  test_flow_reconstructor.py  test_har_parser.py  test_models.py  test_synthetic_data.py
